--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "simple-chat": "file:",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "simple-chat": "file:"
   },
   "scripts": {
     "start": "react-scripts start",
